Fix Paypal on IE11/Edge

--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,12 @@ form,
 	max-width: 100%;
 }
 
+form.nospace {
+    width: auto !important;
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
 form {
 	margin: 3rem auto 0;
 }
